# osu-parser

./: .clang-format  .gitignore  .gitmodules  .npmignore  .prettierignore  .prettierrc  CMakeLists.txt  README.md  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
examples/: basic.ts
examples/node/: index.ts
examples/wasm/: index.html  package.json  vite.config.js
examples/wasm/src/: App.svelte
scripts/: build.ts
src/: index.ts
src/beatmap/: beatmap.cpp  beatmap.hpp
src/binary/: binary.cpp
src/browser/: wasm-worker.ts  wasm-wrapper.d.ts  wasm-wrapper.js  wasm-wrapper.ts
src/core/: CMakeLists.txt
src/core/beatmap/: beatmap.cpp  beatmap.hpp
src/core/binary/: binary.hpp
src/core/osdb/: osdb.cpp  osdb.hpp
src/core/osu/: collection.cpp  db.cpp  filter.cpp  filter.hpp  osu.cpp  osu.hpp  replay.cpp  scores.cpp
src/core/parser/: parser_base.hpp
src/core/utils/: beatmap_writer.hpp  binary.hpp  gzip.hpp  log.hpp
src/lib/: bindings.ts  wasm-browser.ts  wasm-wrapper.ts
src/native/: addon.cpp  log.hpp  wasm.cpp
src/native/bindings/: beatmap.cpp  collection_db.cpp  common.hpp  osdb.cpp  osu_db.cpp  replay.cpp  scores_db.cpp  update_helpers.hpp  utils.cpp
src/native/osu/: parser.cpp
src/osdb/: osdb.cpp  osdb.hpp
src/osu/: osu.cpp  osu.hpp
src/types/: ambient.d.ts  types.ts
src/utils/: log.hpp
tests/: browser-harness.html  parser.test.ts  tsconfig.json
tests/data/: jeff.osu
tests/data/beatmaps/: 1636774.osu  2303521.osu
tests/data/collections/: mathi.osdb
tests/data/replays/: 1.osr  2.osr
tests/data/scores/: scores.db
ts/: index.ts
ts/lib/: bindings.ts
ts/types/: node-gyp-build.d.ts  types.ts
